Fix pdf issue on smaller windows

--- a/stylesResume.css
+++ b/stylesResume.css
@@ -43,6 +43,13 @@
     background-color: #2a2a2a;
 }
 
+.resume {
+    position: absolute;
+    top: 50px;
+    width: 100%;
+    height: 100%;
+}
+
 @media screen and (min-width: 1500px) {
     .resume {
         position: relative;
